data/derived/comb/progs/unify/prog3600.ml.out
Characters 83-84:
  else wwhile f e;;
              ^
Error: This expression has type 'a but an expression was expected of type
         'a * (('b -> 'c) * bool)
       The type variable 'a occurs inside 'a * (('b -> 'c) * bool)
